- converted fonts and some measurements into pixels - fix tabulations in the media queries. They were not aligned. One media query had surrounded several other media queries - requests listing css moved from custom.css into request_listing.css - moved all media queries in a separate file - merge repeated media queries - the margin between the footer and the footer's height set to pixels - the margin is set for the main `#wrapper' instead of the `#wrapper #content' - use a scss mixin for the media queries for the footer height

--- a/assets/stylesheets/modules/navigation.css.scss
+++ b/assets/stylesheets/modules/navigation.css.scss
@@ -1,5 +1,5 @@
 .nav-main {
-  padding: 30px 0 0 0;
+  padding: 2.1em 0 0 0;
 
   a {
 
@@ -7,7 +7,7 @@
     display: inline-block;
     color: #fff;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 1.2em;
     text-transform: uppercase;
   }
 
@@ -26,7 +26,7 @@
 }
 
 .nav-footer {
-  padding: 0 0 25px 0;
+  padding: 0 0 2em 0;
 
   a {
     margin-right: 1.7708333%;
@@ -42,7 +42,3 @@
   }
 }
 
-.nav-footer-sub {
-
-  a { font-size: 14px; }
-}
